--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,8 @@ edition = "2024"
 [dependencies]
 librespot-core = "0.7.1"
 librespot-oauth = "0.7.1"
+librespot-playback = "0.7.1"
+librespot-metadata = "0.7.1"
 xilem = { git="https://github.com/linebender/xilem"}
+rspotify = "0.15.1"
+chrono = "0.4.42"
