--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,5 +1,12 @@
-[profile.dev]
-# One debuginfo file per dependency, to reduce file size of tests/examples.
-# Note that this value is not supported on Windows.
-# See https://doc.rust-lang.org/cargo/reference/profiles.html#split-debuginfo
-split-debuginfo="unpacked"
+[target.x86_64-pc-windows-msvc]
+# Increase default stack size to avoid running out of stack
+# space in debug builds. The size matches Linux's default.
+rustflags = [
+    "-C", "link-arg=/STACK:8000000"
+]
+[target.aarch64-pc-windows-msvc]
+# Increase default stack size to avoid running out of stack
+# space in debug builds. The size matches Linux's default.
+rustflags = [
+    "-C", "link-arg=/STACK:8000000"
+]
