--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "xilem_spotify"
+name = "taan"
 version = "0.1.0"
 edition = "2024"
 
@@ -8,7 +8,10 @@ librespot-core = "0.7.1"
 librespot-oauth = "0.7.1"
 librespot-playback = "0.7.1"
 librespot-metadata = "0.7.1"
-xilem = { git="https://github.com/linebender/xilem"}
 rspotify = "0.15.1"
 chrono = "0.4.42"
-catppuccin = "2.5.1"
+slint = "1.13.1"
+tokio = { version = "1", features = ["full"] }
+
+[build-dependencies]
+slint-build = "1.13.1"
