--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "taan"
 version = "0.1.0"
 edition = "2024"
 
+[lib]
+name = "taan_android"
+crate-type = ["cdylib"]
+
 [dependencies]
 librespot-core = "0.7.1"
 librespot-oauth = "0.7.1"
@@ -12,6 +16,10 @@ rspotify = "0.15.1"
 chrono = "0.4.42"
 slint = "1.13.1"
 tokio = { version = "1", features = ["full"] }
+
+[target.'cfg(target_os = "android")'.dependencies]
+slint = { version = "1.13.1", features = ["backend-android-activity-06"] }
+openssl-sys = { version = "0.9.109", features = [ "vendored" ] }
 
 [build-dependencies]
 slint-build = "1.13.1"
