--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,10 +26,10 @@ jobs:
 
       - name: Install Ubuntu dependencies
         if: matrix.os == 'ubuntu-latest'
-        run: sudo apt-get install -y build-essential libasound2-dev
+        run: sudo apt-get install -y build-essential libasound2-dev libfreetype-dev libfontconfig-dev
 
       - name: Build binary
-        run: cargo build --release --verbose
+        run: cargo build --release
 
       - name: Upload artifact - Linux
         if: matrix.os == 'ubuntu-latest'
