--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,10 +11,10 @@ crate-type = ["cdylib", "lib"]
 librespot-core = "0.7.1"
 librespot-oauth = "0.7.1"
 librespot-playback = "0.7.1"
-librespot-metadata = "0.7.1"
 rspotify = "0.15.1"
 chrono = "0.4.42"
 slint = { version = "1.13.1", features = ["renderer-skia", "backend-winit"] }
+i-slint-backend-winit = "1.13.1"
 tokio = { version = "1", features = ["full"] }
 anyhow = "1.0.100"
 tokio-util = "0.7.16"
