--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,9 @@ crate-type = ["cdylib", "lib"]
 librespot-core = "0.7.1"
 librespot-oauth = "0.7.1"
 librespot-playback = "0.7.1"
+librespot-metadata = "0.7.1"
+reqwest = "0.12.23"
+image = "0.25.8"
 rspotify = "0.15.1"
 chrono = "0.4.42"
 slint = { version = "1.13.1", features = ["renderer-skia", "backend-winit"] }
