feat: added ability to load artist name, and album name, implemented seek. need to automatically increase current time duration over time

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ librespot-core = "0.7.1"
 librespot-oauth = "0.7.1"
 librespot-playback = "0.7.1"
 librespot-metadata = "0.7.1"
+librespot-protocol = "0.7.1"
 reqwest = "0.12.23"
 image = "0.25.8"
 rspotify = "0.15.1"
