--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,8 @@ tokio-util = "0.7.16"
 
 [target.'cfg(target_os = "android")'.dependencies]
 slint = { version = "1.13.1", features = ["backend-android-activity-06"] }
-openssl-sys = { version = "0.9.109", features = ["vendored"] }
+rspotify = { version = "0.15.1", features = ["reqwest-native-tls-vendored"] }
+reqwest = { version = "0.12.23", features = ["native-tls-vendored"] }
 
 [build-dependencies]
 slint-build = "1.13.1"
